My first Website

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One-Click pick up</title>
+    <title>One-Click Eccomerce Website</title>
     <script src="https://kit.fontawesome.com/823ede69be.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="icon" href="./assets/images/assets-img/assets-img/logo.webp">
 </head>
 <body>
     <!--This is the header-->
@@ -17,19 +18,23 @@
                <i class="fa-regular fa-user"></i>
                <i class="fa-solid fa-cart-shopping"></i>
                <i class="fa-solid fa-bars"></i>
-         </div>   
-
-
+         </div>
+         <ul class="nav">
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Contact</a></li>
+         </ul>   
+        
         </nav>
-    </header>
-      <!--This is the hero section-->
-      <section class="hero">
-        <div>
-            <h1>New Product </br>Collection</h1>
+         <!--This is the hero section-->
+       <section class="hero">
+           <h1>New Product </br>Collection</h1>
             <ul>
                 <li><a href="#">Shop Now</a></li>
             </ul>
-        </div>
-     </section>
+       </section>
+    </header>
+     
 </body>
 </html>
