My first Website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <script src="https://kit.fontawesome.com/823ede69be.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="icon" href="./assets/images/assets-img/assets-img/logo.webp">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--This is the header-->
@@ -30,7 +35,7 @@
         </nav>
          <!--This is the hero section-->
        <section class="hero">
-           <h1>New Product </br>Collection</h1>
+           <h1>New Product Collection</h1>
             <ul>
                 <li><a href="#">Shop Now</a></li>
             </ul>
