--- a/index.html
+++ b/index.html
@@ -5,26 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One-Click Eccomerce Website</title>
-    <script src="https://kit.fontawesome.com/823ede69be.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="icon" href="./assets/images/assets-img/assets-img/logo.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,700;1,200&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--This is the header-->
     <header>
         <nav class="logo">
             <img src="./assets/images/assets-img/assets-img/logo.webp" class="img" alt="One-Click pick up logo">
-         <div>
-               <i class="fa-regular fa-user"></i>
-               <i class="fa-solid fa-cart-shopping"></i>
-               <i class="fa-solid fa-bars"></i>
+         <div class="nav-menu">
+             <i data-feather="user"></i>
+             <i data-feather="shopping-cart"></i>
+             <i data-feather="menu"></i>
          </div>
+        
+         <!--The nav for the desktop-->
          <ul class="nav">
              <li><a href="#">Portfolio</a></li>
              <li><a href="#">Blog</a></li>
@@ -35,12 +34,14 @@
         </nav>
          <!--This is the hero section-->
        <section class="hero">
-           <h1>New Product Collection</h1>
-            <ul>
-                <li><a href="#">Shop Now</a></li>
-            </ul>
+           <div>
+              <h1>New Product Collection</h1>
+          </div>
+           <a href="#" class="btn">Shop Now</a>  
        </section>
     </header>
-     
+    <script>
+        feather.replace()
+      </script>
 </body>
 </html>
