tablet and desktop styling

--- a/index.html
+++ b/index.html
@@ -89,22 +89,34 @@
                    </div>
               </div>
               <div class="canvas">
-                  
+                  <div class="text">
+                     Economical cotton canvas></br>$11.08>
+                  </div>
              </div>
               <div class="kars">
-                 Michael Kars Original</br>$15.10>
-              </div>
+                  <div class="text">
+                      Michael Kars Original</br>$15.10>
+                </div>
+                  </div>
               <div class="leather">
-                 Bostanten Women Leather</br>$234.26>
+                   <div class="text">
+                     Bostanten Women Leather</br>$234.26>
+                   </div>
               </div>
               <div class="mirror">
-                 how to optimize your ecommerce store for better conversions></br>READ MORE - 
+                  <div class="text">
+                      how to optimize your ecommerce store for better conversions></br>READ MORE -
+                  </div>
              </div>
               <div class="shower">
-                 Understanding and implementing SEO for ecommerce success</br>READ MORE - 
+                  <div class="text">
+                      Understanding and implementing SEO for ecommerce success</br>READ MORE - 
+                  </div>
              </div>
               <div class="mirror2">
-                 Effective Email Marketing strategy for ecommerce Businesses</br>READ MORE - 
+                  <div class="text">
+                     Effective Email Marketing strategy for ecommerce Businesses</br>READ MORE - 
+                  </div>
               </div>
           </div>
            
