--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
 
                        </div>
                         <div class="text1">
-                         Understanding and implementing SEO for ecommerce success</br>READ MORE - 
+                         Understanding and implementing SEO for ecommerce success<span>READD MORE</span>
+                          <span class="line"></span>
                      </div>
                  </div>
                  <div class="news mirror2">
@@ -166,7 +167,7 @@
           </div>
        </section>
        
-
+<!--The footer section-->
        <footer class="footer">
             <div class="footer_logo">
                 <img src="/assets/images/assets-img/assets-img/logo.png"alt="footer image">
